--- a/index.html
+++ b/index.html
@@ -826,10 +826,12 @@
                           University)</span
                         >
                       </p>
-                      <p><span>Tae-Hyun Kim (M.S.-Ph.D. @ POSTECH)</span></p>
-                      <p><span>Seung-Wan Han (ASML)</span></p>
-                      <p><span>Woo-Suk Jung (@ Yonsei University)</span></p>
-                      <p><span> Dong-Eun Lee (Samsung Electronics)</span></p>
+                      <p><span> Tae-Hyun Kim (M.S.-Ph.D. @ POSTECH)</span></p>
+                      <p><span> Seung-Wan Han (ASML)</span></p>
+                      <p><span> Woo-Suk Jung (M.S. @ Yonsei University)</span></p>
+                      <p><span> Dong-Eun Lee (SK Hynix)</span></p>
+                      <p><span> Yu-Jin Byeon (M.S. @ KAIST)</span></p>
+                      <p><span> Shin-Uk Kang (Ph.D. @ KAIST)</span></p>
                       <p><span> Ji-Ho Kim (4Lynx)</span></p>
                       <p><span> Kyu-Ran Park (LX semicon)</span></p>
                     </div>
