--- a/chip_gallery.html
+++ b/chip_gallery.html
@@ -125,6 +125,33 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
+              src="img/PI_ADPLL.png"
+              class="card-img-top"
+              alt="PI ADPLL"
+            />
+            <div class="card-body">
+              <h5 class="card-title">PI ADPLL</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>May (65-nm T)'24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Kyu-Ran Park</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>N/A</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
               src="img/2T eDRAM PIM.png"
               class="card-img-top"
               alt="2T eDRAM PIM"
@@ -139,7 +166,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Designer:</span>
-                <span>N/A</span>
+                <span>Dong-Hyun Lee</span>
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
@@ -166,7 +193,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Designer:</span>
-                <span>N/A</span>
+                <span>Kang-Min Kim</span>
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
@@ -193,7 +220,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Designer:</span>
-                <span>N/A</span>
+                <span>Dong-Hoe Heo</span>
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
@@ -301,7 +328,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Designer:</span>
-                <span>N/A</span>
+                <span>Shin-Uk Kang</span>
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
