--- a/chip_gallery.html
+++ b/chip_gallery.html
@@ -135,7 +135,7 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Date:</span>
-                <span>May (65-nm T)'24</span>
+                <span>Oct. (65-nm T)'24</span>
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Designer:</span>
@@ -148,6 +148,88 @@
             </ul>
           </div>
         </div>
+
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
+              src="img/kmkim_puf2.PNG"
+              class="card-img-top"
+              alt="ILO-based PUF"
+            />
+            <div class="card-body">
+              <h5 class="card-title">ILO-based PUF</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>Oct. (65-nm T)'24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Kang-Min Kim</Kbd></span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>N/A</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
+              src="img/ADC_DSP_RX.PNG"
+              class="card-img-top"
+              alt="ADC DSP RX"
+            />
+            <div class="card-body">
+              <h5 class="card-title">ADC-based DSP RX</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>Oct. (40-nm T)'24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Sang-Hyun Ok</Kbd></span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>N/A</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
+              src="img/OSPLL.PNG"
+              class="card-img-top"
+              alt="Oversampling PLL"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Oversampling PLL</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>Oct. (40-nm T)'24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Ji-Ho Kim</Kbd></span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>N/A</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
 
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
