--- a/index.html
+++ b/index.html
@@ -831,6 +831,7 @@
                       <p><span> Woo-Suk Jung (M.S. @ Yonsei University)</span></p>
                       <p><span> Dong-Eun Lee (SK Hynix)</span></p>
                       <p><span> Yu-Jin Byeon (M.S. @ KAIST)</span></p>
+                      <p><span> Min-Gwon Song (M.S. @ Hanyang University)</span></p>
                       <p><span> Shin-Uk Kang (Ph.D. @ KAIST)</span></p>
                       <p><span> Ji-Ho Kim (4Lynx)</span></p>
                       <p><span> Kyu-Ran Park (LX semicon)</span></p>
