--- a/index.html
+++ b/index.html
@@ -326,6 +326,15 @@
             <h1>HPIC in Media</h1>
           </div>
           <div class="col-12 col-lg-8">
+
+            <h5 class="in-media-item">
+              <a
+                href="https://www.newshyu.com/news/articleView.html?idxno=1017521"
+              >
+                "이재건 학생, 국제 메이저 학술대회 ASSCC ‘24에 논문 개제"</a
+              >
+            </h5>
+
             <h5 class="in-media-item">
               <a
                 href="https://www.newshyu.com/news/articleView.html?idxno=1008944"
