--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     
     <style>
     .pub-figures {
-      display: inline-flex; /* 텍스트와 같은 줄에 배치 */
+      /* display: inline-flex; 텍스트와 같은 줄에 배치 */
       gap: 10px; /* 이미지 간 간격 */
       align-items: center; /* 이미지와 텍스트의 세로 정렬 */
       margin-left: 10px; /* 텍스트와 이미지 사이 간격 */
