--- a/index.html
+++ b/index.html
@@ -71,12 +71,11 @@
     
     
     <style>
-    .pub-figures {
-      /* display: inline-flex; 텍스트와 같은 줄에 배치 */
-      gap: 10px; /* 이미지 간 간격 */
-      align-items: center; /* 이미지와 텍스트의 세로 정렬 */
-      margin-left: 10px; /* 텍스트와 이미지 사이 간격 */
-    }
+ .pub-figures {
+    display: block; /* 블록 요소로 설정 */
+    margin-top: 10px; /* 텍스트와 이미지 간의 간격 추가 */
+    text-align: left; /* 이미지 정렬 (왼쪽으로 맞춤) */
+  }
 
   .pub-figure {
       width: 40px; /* 이미지 크기 조정 */
