--- a/chip_gallery.html
+++ b/chip_gallery.html
@@ -396,7 +396,7 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
-              src="img/SRAM_PIM_Accelerator.png"
+              src="img/SRAM_PIM_Accelerator.JPG"
               class="card-img-top"
               alt="SRAM PIM Accelerator"
             />
