--- a/index.html
+++ b/index.html
@@ -292,6 +292,20 @@
             <h5>Timeline</h5>
             <ul class="news-ul">
               <li>
+                <p class="news-date">Feb.2025</p>
+                <p>
+                  Welcome! D.-U. Jin have joined the HPIC design
+                  lab. as a candidate for a M.S.-Ph.D.
+                </p>
+              </li>
+              <li>
+                <p class="news-date">Feb.2025</p>
+                <p>
+                  Welcome! S.-M. Jin, S.-H. Gong, J.-G. Lee, D.-J. Kwak, S.-H. Kim, H.-S. Kim and D.-H. Kim have joined the HPIC design
+                  lab. as a candidate for a Master's degree.
+                </p>
+              </li>
+              <li>
                 <p class="news-date">Aug.2024</p>
                 <p>
                   Welcome! J.-H. Pyeon, S.-Y Kwon and I.-H. Han have joined the HPIC design
