--- a/index.html
+++ b/index.html
@@ -435,6 +435,42 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal1"
+                  src="img/PI_ADPLL.png"
+                />
+                <p>PI ADPLL</p>
+                <p>Oct. (65-nm T)'24</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#Modal1"
+                  src="img/kmkim_puf2.PNG"
+                />
+                <p>ILO-based PUF</p>
+                <p>Oct. (65-nm T)'24</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#Modal1"
+                  src="img/ADC_DSP_RX.PNG"
+                />
+                <p>ADC DSP RX</p>
+                <p>Oct. (40-nm T)'24</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#Modal1"
+                  src="img/OSPLL.PNG"
+                />
+                <p>Oversampling PLL</p>
+                <p>Oct. (40-nm T)'24</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#Modal1"
                   src="img/2T eDRAM PIM.png"
                 />
                 <p>2T eDRAM PIM</p>
@@ -489,7 +525,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal7"
-                  src="img/SRAM_PIM_Accelerator.png"
+                  src="img/SRAM_PIM_Accelerator.JPG"
                 />
                 <p>SRAM PIM Accelerator</p>
                 <p>Dec (65-nm T)'23</p>
