--- a/index.html
+++ b/index.html
@@ -363,6 +363,14 @@
 
             <h5 class="in-media-item">
               <a
+                href="https://www.idec.or.kr/vod/apply/view/?&no=365"
+              >
+                "IDEC 고속 칩렛향 디지털 인터페이스 회로 설계 강좌"</a
+              >
+            </h5>
+
+            <h5 class="in-media-item">
+              <a
                 href="https://www.newshyu.com/news/articleView.html?idxno=1017521"
               >
                 "이재건 학생, 국제 메이저 학술대회 ASSCC ‘24에 논문 개제"</a
