--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                 </p>
                 <p>
                   <span class="sponsor"
-                    >National Research Fund (NRF) of Korea; 우수신진연구</span
+                    >National Research Foundation (NRF) of Korea; 우수신진연구</span
                   >
                 </p>
               </li>
@@ -735,8 +735,8 @@
                 </p>
                 <p>
                   <span class="sponsor"
-                    >National Research Fund (NRF) of Korea</span
-                  >
+                    >National Research Foundation (NRF) of Korea</span
+                  >, completed
                 </p>
               </li>
               <li>
@@ -762,7 +762,7 @@
                 <p class="research-date">Jul. 2022 - Feb. 2025</p>
                 <p>반도체전공트랙사업</p>
                 <p>
-                  <span class="sponsor">KIAT</span>
+                  <span class="sponsor">KIAT</span>, completed
                 </p>
               </li>
               <li>
@@ -777,7 +777,7 @@
                 <p>AI Hardware Center (인공지능 반도체 융합연구센터)</p>
                 <p>
                   <span class="sponsor"
-                    >National Research Fund (NRF) of Korea</span
+                    >National Research Foundation (NRF) of Korea</span
                   >
                 </p>
               </li>
@@ -789,7 +789,7 @@
                 </p>
                 <p>
                   <span class="sponsor"
-                    >National Research Fund (NRF) of Korea</span
+                    >National Research Foundation (NRF) of Korea</span
                   >, completed
                 </p>
               </li>
@@ -800,7 +800,7 @@
               </li>
               <li>
                 <p>전력반도체 인력 양성센터</p>
-                <p>...</p>
+                <p><span class="sponsor">HYU</span>, completed</p>
               </li>
             </ul>
           </div>
@@ -835,8 +835,8 @@
             <div class="row ms-candidates-2503"></div>             -->
 
             <!-- Undergraduate Researchers -->
-            <!-- <h3 id="undergraduate">Undergraduate Researchers</h3>
-            <div class="row undergraduate-researchers"></div> -->
+            <h3 id="undergraduate">Undergraduate Researchers</h3>
+            <div class="row undergraduate-researchers"></div>
 
             <!-- Undergraduate Internship-->
             <div class="accordion">
