--- a/chip_gallery.html
+++ b/chip_gallery.html
@@ -125,7 +125,61 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
-              src="img/PI_ADPLL.png"
+              src="img/chip_new/2T_PIM_24nov.png"
+              class="card-img-top"
+              alt="2T eDRAM PIM"
+            />
+            <div class="card-body">
+              <h5 class="card-title">2T eDRAM PIM</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>Nov. (65-nm T)'24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Dong-Hyun Lee</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>Digital Analog revision</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
+              src="img/chip_new/3T_PIM_24nov.png"
+              class="card-img-top"
+              alt="3T eDRAM PIM"
+            />
+            <div class="card-body">
+              <h5 class="card-title">3T eDRAM PIM</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>Nov. (65-nm T)'24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Dong-Hyun Lee</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>Digital Analog revision</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
+              src="img/chip_new/PLL_KL_24nov.png"
               class="card-img-top"
               alt="PI ADPLL"
             />
@@ -152,7 +206,7 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
-              src="img/kmkim_puf2.PNG"
+              src="img/chip_new/PUF_24nov.png"
               class="card-img-top"
               alt="ILO-based PUF"
             />
@@ -170,7 +224,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
-                <span>N/A</span>
+                <span>Analog revision</span>
               </li>
             </ul>
           </div>
@@ -179,7 +233,7 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
-              src="img/ADC_DSP_RX.PNG"
+              src="img/chip_new/DSP_RX_fig.png"
               class="card-img-top"
               alt="ADC DSP RX"
             />
@@ -197,7 +251,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
-                <span>N/A</span>
+                <span>failed</span>
               </li>
             </ul>
           </div>
@@ -206,7 +260,7 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
-              src="img/OSPLL.PNG"
+              src="img/chip_new/OSPLL_24.png"
               class="card-img-top"
               alt="Oversampling PLL"
             />
@@ -230,11 +284,37 @@
           </div>
         </div>
 
+        <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
+              src="img/chip_new/3T_PIM_24jul_SS.png"
+              class="card-img-top"
+              alt="3T eDRAM PIM"
+            />
+            <div class="card-body">
+              <h5 class="card-title">3T eDRAM PIM</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>Jul (65-nm T)'24</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Woo-Suk Jeong</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>failed</span>
+              </li>
+            </ul>
+          </div>
+        </div>
 
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
-              src="img/2T eDRAM PIM.png"
+              src="img/chip_new/2T_PIM_24may.png"
               class="card-img-top"
               alt="2T eDRAM PIM"
             />
@@ -252,7 +332,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
-                <span>N/A</span>
+                <span>failed</span>
               </li>
             </ul>
           </div>
@@ -261,7 +341,7 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
-              src="img/ILO-based PUF.png"
+              src="img/chip_new/PUF_24may.png"
               class="card-img-top"
               alt="ILO-based PUF"
             />
@@ -279,7 +359,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
-                <span>N/A</span>
+                <span>failed</span>
               </li>
             </ul>
           </div>
@@ -329,11 +409,11 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Designer:</span>
-                <span>N/A</span>
+                <span>Yu-Jin Byeon</span>
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
-                <span>N/A</span>
+                <span>failed</span>
               </li>
             </ul>
           </div>
@@ -387,7 +467,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
-                <span>N/A</span>
+                <span>failed</span>
               </li>
             </ul>
           </div>
@@ -437,11 +517,11 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Designer:</span>
-                <span>N/A</span>
+                <span>In-Woo Jang</span>
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
-                <span>N/A</span>
+                <span>failed</span>
               </li>
             </ul>
           </div>
@@ -501,32 +581,10 @@
           </div>
         </div>
 
-        <div class="col-12 col-lg-3">
-          <div class="card chip-detail-card mb-4">
-            <img src="img/ADPLL2.png" class="card-img-top" alt="ADPLL" />
-            <div class="card-body">
-              <h5 class="card-title">ADPLL</h5>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item d-flex align-items-center flex-wrap">
-                <span>Date:</span>
-                <span>Apr (28-nm S)'23</span>
-              </li>
-              <li class="list-group-item d-flex align-items-center flex-wrap">
-                <span>Designer:</span>
-                <span>N/A</span>
-              </li>
-              <li class="list-group-item d-flex align-items-center flex-wrap">
-                <span>Description:</span>
-                <span>N/A</span>
-              </li>
-            </ul>
-          </div>
-        </div>
 
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
-            <img src="img/ADPLL2.png" class="card-img-top" alt="ADPLL" />
+            <img src="img/chip_new/ADPLL_23jan_SS.png" class="card-img-top" alt="ADPLL" />
             <div class="card-body">
               <h5 class="card-title">ADPLL</h5>
             </div>
@@ -537,7 +595,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Designer:</span>
-                <span>N/A</span>
+                <span>Ji-Ho Kim</span>
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
@@ -550,7 +608,7 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
-              src="img/Injection Lock Oscillato.png"
+              src="img/chip_new/ILO_23jan_SS.png"
               class="card-img-top"
               alt="Injection Lock Oscillator (ILO)"
             />
@@ -564,7 +622,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Designer:</span>
-                <span>N/A</span>
+                <span>Geun-Young Yu</span>
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
@@ -577,7 +635,7 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
-              src="img/Flash  ADC.png"
+              src="img/chip_new/ADC_23jan_SS.png"
               class="card-img-top"
               alt="Flash ADC"
             />
@@ -591,7 +649,7 @@
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Designer:</span>
-                <span>N/A</span>
+                <span>Dong-Hoe Heo</span>
               </li>
               <li class="list-group-item d-flex align-items-center flex-wrap">
                 <span>Description:</span>
