--- a/index.html
+++ b/index.html
@@ -442,7 +442,25 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal1"
-                  src="img/PI_ADPLL.png"
+                  src="img/chip_new/2T_PIM_24nov.png"
+                />
+                <p>2T eDRAM PIM</p>
+                <p>Nov. (65-nm T)'24</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#Modal1"
+                  src="img/chip_new/3T_PIM_24nov.png"
+                />
+                <p>3T eDRAM PIM</p>
+                <p>Nov. (65-nm T)'24</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#Modal1"
+                  src="img/chip_new/PLL_KL_24nov.png"
                 />
                 <p>PI ADPLL</p>
                 <p>Oct. (65-nm T)'24</p>
@@ -451,7 +469,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal1"
-                  src="img/kmkim_puf2.PNG"
+                  src="img/chip_new/PUF_24nov.png"
                 />
                 <p>ILO-based PUF</p>
                 <p>Oct. (65-nm T)'24</p>
@@ -460,7 +478,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal1"
-                  src="img/ADC_DSP_RX.PNG"
+                  src="img/chip_new/DSP_RX_fig.png"
                 />
                 <p>ADC DSP RX</p>
                 <p>Oct. (40-nm T)'24</p>
@@ -469,7 +487,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal1"
-                  src="img/OSPLL.PNG"
+                  src="img/chip_new/OSPLL_24.png"
                 />
                 <p>Oversampling PLL</p>
                 <p>Oct. (40-nm T)'24</p>
@@ -478,16 +496,27 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal1"
-                  src="img/2T eDRAM PIM.png"
+                  src="img/chip_new/3T_PIM_24jul_SS.png"
+                />
+                <p>3T eDRAM PIM</p>
+                <p>Jul (28-nm S)'24</p>
+              </div>
+              
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#Modal1"
+                  src="img/chip_new/2T_PIM_24may.png"
                 />
                 <p>2T eDRAM PIM</p>
                 <p>May (65-nm T)'24</p>
               </div>
+
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal2"
-                  src="img/ILO-based PUF.png"
+                  src="img/chip_new/PUF_24may.png"
                 />
                 <p>ILO-based PUF</p>
                 <p>May (65-nm T)'24</p>
@@ -564,20 +593,12 @@
                 <p>High-Speed Equalizer</p>
                 <p>July (28-nm S)'23</p>
               </div>
-              <div class="chip-item">
-                <img
-                  data-bs-toggle="modal"
-                  data-bs-target="#Modal11"
-                  src="img/ADPLL2.png"
-                />
-                <p>ADPLL</p>
-                <p>Apr (28-nm S)'23</p>
-              </div>
+
               <div class="chip-item">
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal12"
-                  src="img/ADPLL2.png"
+                  src="img/chip_new/ADPLL_23jan_SS.png"
                 />
                 <p>ADPLL</p>
                 <p>Jan (28-nm S)'23</p>
@@ -586,7 +607,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal13"
-                  src="img/Injection Lock Oscillato.png"
+                  src="img/chip_new/ILO_23jan_SS.png"
                 />
                 <p>Injection Lock Oscillator (ILO)</p>
                 <p>Jan (28-nm S)'23</p>
@@ -595,7 +616,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal14"
-                  src="img/Flash  ADC.png"
+                  src="img/chip_new/ADC_23jan_SS.png"
                 />
                 <p>Flash ADC</p>
                 <p>Jan (28-nm S)'23</p>
