--- a/index.html
+++ b/index.html
@@ -856,8 +856,8 @@
             <div class="row ms-candidates-2503"></div>             -->
 
             <!-- Undergraduate Researchers -->
-            <!-- <h3 id="undergraduate">Undergraduate Researchers</h3>
-            <div class="row undergraduate-researchers"></div> -->
+            <h3 id="undergraduate">Undergraduate Researchers</h3>
+            <div class="row undergraduate-researchers"></div>
 
             <!-- Undergraduate Internship-->
             <div class="accordion">
