fix: jquery-ui css, js 내장

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
 
     <title>HPIC</title>
 
-    <link
-      rel="stylesheet"
-      href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css"
-    />
+    <link rel="stylesheet" href="css/jquery-ui.css" />
 
     <link
       rel="stylesheet"
@@ -1194,8 +1191,7 @@
     <!-- jQuery -->
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
-    <!-- Slick JS -->
+    <script src="js/jquery-ui.js"></script>    <!-- Slick JS -->
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
