--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css"
+      href="css/slick.min.css"
     />
 
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+      href="css/slick-theme.min.css"
     />
 
     <link
