--- a/index.html
+++ b/index.html
@@ -1186,11 +1186,11 @@
     ></script>
     <!-- jQuery -->
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="js/jquery-3.7.1.js"></script>
     <script src="js/jquery-ui.js"></script>    <!-- Slick JS -->
     <script
       type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+      src="js/slick.min.js"
     ></script>
     <!-- Custom js -->
     <script src="js/publication.js"></script>
