--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="news-gallery-items gallery-card-container"></div>
 
             <hr />
-            <h5>Timeline</h5>
+            <!-- <h5>Timeline</h5>
             <ul class="news-ul">
               <li>
                 <p class="news-date">Feb.2025</p>
@@ -342,7 +342,7 @@
                 <p class="news-date">Mar.2022</p>
                 <p>Professor Min-Seong Choo is appointed.</p>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
