--- a/index.html
+++ b/index.html
@@ -729,7 +729,11 @@
             <h5 class="h5-items" id="research-projects">
               Research Projects & Sponsors
             </h5>
+            <div class="research-projects-container"></div>
 
+            <!-- script 추가 -->
+            <script src="js/research_projects.js"></script>
+<!-- 
             <ul class="research-projects-ul">
               <li>
                 <p class="research-date">Apr. 2024 - Mar. 2027</p>
@@ -818,7 +822,7 @@
                 <p>전력반도체 인력 양성센터</p>
                 <p><span class="sponsor">HYU</span>, completed</p>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
