--- a/index.html
+++ b/index.html
@@ -729,6 +729,7 @@
             <h5 class="h5-items" id="research-projects">
               Research Projects & Sponsors
             </h5>
+
             <div class="research-projects-container"></div>
 
             <!-- script 추가 -->
@@ -1199,6 +1200,7 @@
     <!-- Custom js -->
     <script src="js/publication.js"></script>
     <script src="js/update_award.js"></script>
+    <script src="js/research_projects.js"></script>
     <script src="js/profile.js"></script>
     <script src="js/script.js"></script>
   </body>
