--- a/chip_gallery.html
+++ b/chip_gallery.html
@@ -449,7 +449,7 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
-              src="img/ILO-based PUF.png"
+              src="img/chip_new/ADPLL_ILO_CAL.png"
               class="card-img-top"
               alt="ADPLL ILO Calibration"
             />
