--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal6"
-                  src="img/ILO-based PUF.png"
+                  src="img/chip_new/ADPLL_ILO_CAL.png"
                 />
                 <p>ADPLL ILO Calibration</p>
                 <p>Dec (65-nm T)'23</p>
