--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@
 
             <div class="autoplay">
               <div class="sponsor-item"></div>
+                <img
+                src="img/NRF.jpeg"
+                class="d-block w-100"
+                alt="NRF Logo"
+                />
               <div class="sponsor-item"></div>
               <div class="sponsor-item"></div>
               <div class="sponsor-item"></div>
