--- a/index.html
+++ b/index.html
@@ -179,12 +179,9 @@
             <div class="dim"></div>
 
             <div class="autoplay">
-              <div class="sponsor-item"></div>
-                <img
-                src="img/NRF.jpeg"
-                class="d-block w-100"
-                alt="NRF Logo"
-                />
+              <div class="sponsor-item">
+                <img src="img/NRF.jpeg" class="d-block w-100" alt="NRF Logo" />
+              </div>
               <div class="sponsor-item"></div>
               <div class="sponsor-item"></div>
               <div class="sponsor-item"></div>
