--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
             <div class="autoplay">
               <div class="sponsor-item">
-                <img src="img/NRF.jpeg" class="d-block w-100" alt="NRF Logo" />
+                <img src="img/NRF.jpeg" alt="NRF Logo" />
               </div>
               <div class="sponsor-item"></div>
               <div class="sponsor-item"></div>
