--- a/index.html
+++ b/index.html
@@ -179,9 +179,7 @@
             <div class="dim"></div>
 
             <div class="autoplay">
-              <div class="sponsor-item">
-                <img src="img/NRF.jpeg" alt="NRF Logo" />
-              </div>
+              <div class="sponsor-item"></div>
               <div class="sponsor-item"></div>
               <div class="sponsor-item"></div>
               <div class="sponsor-item"></div>
