--- a/chip_gallery.html
+++ b/chip_gallery.html
@@ -368,7 +368,7 @@
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
-              src="img/PI-based CDR.png"
+              src="img/PICDR_2.png"
               class="card-img-top"
               alt="PI-based CDR"
             />
