--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal3"
-                  src="img/PI-based CDR.png"
+                  src="img/PICDR_2.png"
                 />
                 <p>PI-based CDR</p>
                 <p>June (28-nm T)'24</p>
