--- a/index.html
+++ b/index.html
@@ -440,6 +440,15 @@
                 <img
                   data-bs-toggle="modal"
                   data-bs-target="#Modal1"
+                  src="img/chip_new/PICDR_25.png"
+                />
+                <p>PI-based CDR</p>
+                <p>Feb. (28-nm T)'25</p>
+              </div>
+              <div class="chip-item">
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#Modal1"
                   src="img/chip_new/2T_PIM_24nov.png"
                 />
                 <p>2T eDRAM PIM</p>
