--- a/chip_gallery.html
+++ b/chip_gallery.html
@@ -122,6 +122,33 @@
       <div class="row">
         <h2>Chip Gallery</h2>
 
+                <div class="col-12 col-lg-3">
+          <div class="card chip-detail-card mb-4">
+            <img
+              src="img/chip_new/PICDR_25.png"
+              class="card-img-top"
+              alt="PI-based CDR"
+            />
+            <div class="card-body">
+              <h5 class="card-title">PI-based CDR</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Date:</span>
+                <span>Feb. (28-nm T)'25</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Designer:</span>
+                <span>Dong-Hoe Heo</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center flex-wrap">
+                <span>Description:</span>
+                <span>Digital Analog revision</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <div class="col-12 col-lg-3">
           <div class="card chip-detail-card mb-4">
             <img
