--- a/index.html
+++ b/index.html
@@ -266,8 +266,22 @@
             <h1>News</h1>
           </div>
           <div class="col-12 col-lg-8">
+
+            <h5>Timeline</h5>
+            <ul class="news-ul">
+              <li>
+                <p class="news-date">2025</p>
+                <p>
+                  [1]TEMP
+                  [2]TEMP
+                </p>
+              </li>
+
+            </ul> 
+            <hr />
+
             <div class="gallery-title-row">
-              <h5>Gallery</h5>
+              <h5>Award</h5>
               <a href="news_gallery.html">
                 <span> Click for more details</span>
                 <button class="btn btn-primary btn-rotate">
@@ -284,67 +298,8 @@
             </div>
             <div class="news-gallery-items gallery-card-container"></div>
 
-            <hr />
-            <!-- <h5>Timeline</h5>
-            <ul class="news-ul">
-              <li>
-                <p class="news-date">Feb.2025</p>
-                <p>
-                  Welcome! D.-U. Jin have joined the HPIC design
-                  lab. as a candidate for a M.S.-Ph.D.
-                </p>
-              </li>
-              <li>
-                <p class="news-date">Feb.2025</p>
-                <p>
-                  Welcome! S.-M. Jin, S.-H. Gong, J.-G. Lee, D.-J. Kwak, S.-H. Kim, H.-S. Kim and D.-H. Kim have joined the HPIC design
-                  lab. as a candidate for a Master's degree.
-                </p>
-              </li>
-              <li>
-                <p class="news-date">Aug.2024</p>
-                <p>
-                  Welcome! J.-H. Pyeon, S.-Y Kwon and I.-H. Han have joined the HPIC design
-                  lab. as a candidate for a Master's degree.
-                </p>
-              </li>
-              <li>
-                <p class="news-date">Feb.2024</p>
-                <p>
-                  Welcome! S.-H. Ok and D.-H. Lee have joined the HPIC design
-                  lab. as a candidate for a Master's degree.
-                </p>
-              </li>
-              <li>
-                <p class="news-date">Feb.2023</p>
-                <p>
-                  Welcome! D.-H. Heo and K.-R. Park have joined the HPIC design
-                  lab. as a candidate for a Master's degree.
-                </p>
-              </li>
-              <li>
-                <p class="news-date">Feb.2023</p>
-                <p>
-                  Welcome! S.-U. Kang and K.-M. Kim have joined the HPIC design
-                  lab. as a candidate for an M.S.-Ph.D.
-                </p>
-              </li>
-              <li>
-                <p class="news-date">Aug.2022</p>
-                <p>
-                  Welcome! J. Kim has joined the HPIC design lab. as a candidate
-                  for a Master's degree.
-                </p>
-              </li>
-              <li>
-                <p class="news-date">Mar.2022</p>
-                <p>HPIC Design Lab. website is open.</p>
-              </li>
-              <li>
-                <p class="news-date">Mar.2022</p>
-                <p>Professor Min-Seong Choo is appointed.</p>
-              </li>
-            </ul> -->
+
+
           </div>
         </div>
       </div>
