--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
               <li>
                 <p class="news-date">2025</p>
                 <p>
-                  [1]TEMP
-                  [2]TEMP
+                  <li>[1]TEMP</li>
+                  <li>[2]TEMP</li>
                 </p>
               </li>
 
