--- a/index.html
+++ b/index.html
@@ -273,10 +273,25 @@
                 <p class="news-date">2025</p>
                 <ul>
                   <li>[1]TEMP</li>
+                  <li>[Apr.] Prof. Choo has been selected as a recipient of the Outstanding Young Scientist Grant (우수신진연구) from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>
+                </ul>
+                <p class="news-date">2024</p>
+                <ul>
+                  <li>[1]TEMP</li>
+                  <li>[2]TEMP</li>
+                  <li>[Apr.] Prof. Choo has been selected as a recipient of the <b>Outstanding Young Scientist Grant (우수신진연구)</b> from NRF for Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets</li>                  
+                </ul>  
+                <p class="news-date">2023</p>
+                <ul>
+                  <li>[1]TEMP</li>
                   <li>[2]TEMP</li>
                 </ul>
+                <p class="news-date">2022</p>
+                <ul>
+                  <li>[2]TEMP</li>                  
+                  <li>[Mar.] Prof. Choo has been appointed Hanyang University!</li>
+                </ul>                                              
               </li>
-
             </ul> 
             <hr />
 
@@ -297,9 +312,6 @@
               </a>
             </div>
             <div class="news-gallery-items gallery-card-container"></div>
-
-
-
           </div>
         </div>
       </div>
